--- a/poem91.html
+++ b/poem91.html
@@ -28,7 +28,7 @@
           <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
-           <li><a href="poem6.html">朝发夕诗</a></li>
+          <li><a href="poem6.html">朝发夕诗</a></li>
 		  <li><a href="poem91.html">梦的倒影</a></li>
         </ul>
       </li>
@@ -145,8 +145,8 @@
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem82.html" title="朝发夕诗">朝发夕诗</a></p>
-      <p>下一篇：<a >无</a></p>
+      <p>上一篇：<a href="poem83.html" title="我有一个梦想">我有一个梦想</a></p>
+      <p>下一篇：<a href="poem92.html" title="被爱妄想症">被爱妄想症</a></p>
       <p> </p>
       <p> </p>
     </div>
