--- a/poem92.html
+++ b/poem92.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>我有一个梦想</title>
+<title>被爱妄想症</title>
 <link rel="icon" type="image/x-icon" href="images/gao.ico"/>  
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
@@ -28,7 +28,7 @@
           <li><a href="poem0.html">待成追忆</a></li>
           <li><a href="poem4.html">不诉离殇</a></li>
           <li><a href="poem5.html">孤单成瘾</a></li>
-           <li><a href="poem6.html">朝发夕诗</a></li>
+          <li><a href="poem6.html">朝发夕诗</a></li>
 		  <li><a href="poem91.html">梦的倒影</a></li>
         </ul>
       </li>
@@ -62,55 +62,83 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 我有一个梦想</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 被爱妄想症</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">我有一个梦想</h3>
+      <h3 class="news_title" style="text-align:center;">被爱妄想症</h3>
       <div class="bloginfo" style="text-align:center;">
         <ul>
           <li class="author">九曰</li>
-          <li class="lmname">我有一个梦想</li>
-          <li class="timer">2018-12-31</li>
+          <li class="lmname">被爱妄想症</li>
+          <li class="timer">2000-00-00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-		<div class="news_about" style="text-align:center;">我也曾年少轻狂 拥有过很多梦想</div>
-		世界和平 永无硝烟<br>
-		大好河山 碧海蓝天<br>
-		阳光普照 温暖人间<br>
-		风调雨顺 国泰民安<br>
-
-		<div class="news_about" style="text-align:center;">我梦想有朝一日 立于世界之巅</div>
-		超然于世 天下无双<br>
-		世间万物 唯我称王<br>
-		纵横四海 席卷八荒<br>
-		千载传名 万古流芳<br>
-
-		<div class="news_about" style="text-align:center;">我以为那年那个姑娘 会是我的毕生梦想</div>
-		白云碧落 一面之诺<br>
-		相思灼灼 何处漂泊<br>
-		以梦为墨 写着寂寞<br>
-		此生之托 是错也错<br>
-
-		<div class="news_about" style="text-align:center;">现在的梦想 是学会放下许多梦想</div>
-		天下之大 四海为家<br>
-		万草千花 了无牵挂<br>
-		人世繁华 淡水清茶<br>
-		骑千里马 去断肠崖<br>
+		<div class="news_about" style="text-align:center;">以自作多情地渴望梦想成真来描绘自知之明地暗恋的被爱妄想症患者亲力亲为地讲述了你叫了我的名字我连孩子在哪上学都想好了的心路历程</div>
 		<br>
+		你是四月春风吹来的桃花
+		<br>
+		沉寂的情愫在荒土里萌芽
+		<br>
+		一方水土养一方骏马
+		<br>
+		天下之大有多少人能到达
+		<br>
+		
+		<br>
+		我们品尝着星星和月牙
+		<br>
+		夜晚的风将黑暗融化
+		<br>
+		我们点亮了梦乡的城塔
+		<br>
+		又沉睡在彼此的灯下
+		<br>
+
+		<br>
+		羞赧的花充盈在了盛夏
+		<br>
+		丰硕的果子别让它落在地下
+		<br>
+		你叫了我的名字 文静而优雅
+		<br>
+		波澜不惊的我 在虚拟中厮杀
+		<br>
+		
+		<br>
+		理想是大厦将倾的悬崖
+		<br>
+		妄想是在废墟中留下
+		<br>
+		回不去家 连思念都无暇
+		<br>
+		长了守候 消了年华
+		<br>
+
+		<br>
+		就把小鹿撞死作为惩罚
+		<br>
+		不再留心渺茫的回答
+		<br>
+		你也许大概可能八成
+		<br>
+		是有一丁点喜欢我吧
+		<br><br>
 		<center>
-        <img alt="" src="images/poem/82.jpg"><br>
+        <img alt="" src="images/poem/92.jpg"><br>
 		</center>
         <br>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem82.html" title="朝发夕诗">朝发夕诗</a></p>
-      <p>下一篇：<a href="poem91.html" title="梦的倒影">梦的倒影</a></p>
+      <p>上一篇：<a href="poem91.html" title="梦的倒影">梦的倒影</a></p>
+      <p>下一篇：<a >无</a></p>
+      <p> </p>
+      <p> </p>
     </div>
   </div>
   <div class="sidebar">
