--- a/poem6.html
+++ b/poem6.html
@@ -153,6 +153,24 @@
       </div>
     </div>
 	
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="poem83.html" >我有一个梦想</a></h3>
+      <span class="blogpic"><a href="poem83.html" title=""><img src="images/poem/83.jpg" alt=""></a></span>
+      <p class="blogtext">世界和平 永无硝烟<br>
+		大好河山 碧海蓝天<br>
+		阳光普照 温暖人间<br>
+		风调雨顺 国泰民安<br></p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">九曰</li>
+          <li class="lmname">朝发夕诗</li>
+          <li class="timer">2000-00-00</li>
+          <li class="view">99已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	
   </div>
   <!--blogsbox end-->
   <div class="sidebar">
