--- a/poem82.html
+++ b/poem82.html
@@ -104,7 +104,7 @@
     </div>
     <div class="nextinfo">
       <p>上一篇：<a href="poem81.html" title="女神赋">女神赋</a></p>
-      <p>下一篇：<a href="poem91.html" title="梦的倒影">梦的倒影</a></p>
+      <p>下一篇：<a href="poem83.html" title="我有一个梦想">我有一个梦想</a></p>
       <p> </p>
       <p> </p>
     </div>
