--- a/poem92.html
+++ b/poem92.html
@@ -77,15 +77,15 @@
       </div>
       <div class="news_con" style="text-align:center;">
 		<!--content start-->
-		<div class="news_about" style="text-align:center;">以自作多情地渴望梦想成真来描绘自知之明地暗恋的被爱妄想症患者亲力亲为地讲述了你叫了我的名字我连孩子在哪上学都想好了的心路历程</div>
+		<!--div class="news_about" style="text-align:center;">你叫了我的名字<br>我连孩子在哪上学都想好了</div-->
 		<br>
 		你是四月春风吹来的桃花
 		<br>
-		沉寂的情愫在荒土里萌芽
+		沉寂的情愫在枯枝上萌芽
 		<br>
-		一方水土养一方骏马
+		孤独的大漠里荒兵乱马
 		<br>
-		天下之大有多少人能到达
+		漆黑的夜空燃起了盛世烟花
 		<br>
 		
 		<br>
@@ -93,15 +93,15 @@
 		<br>
 		夜晚的风将黑暗融化
 		<br>
-		我们点亮了梦乡的城塔
+		我们点亮了沉睡的城塔
 		<br>
-		又沉睡在彼此的灯下
+		又栖息在彼此的灯下
 		<br>
 
 		<br>
-		羞赧的花充盈在了盛夏
+		浪漫的花开在了盛夏
 		<br>
-		丰硕的果子别让它落在地下
+		羞红的果只现于童话
 		<br>
 		你叫了我的名字 文静而优雅
 		<br>
@@ -111,7 +111,7 @@
 		<br>
 		理想是大厦将倾的悬崖
 		<br>
-		妄想是在废墟中留下
+		妄想在残垣断壁中留下
 		<br>
 		回不去家 连思念都无暇
 		<br>
