--- a/poem.html
+++ b/poem.html
@@ -108,9 +108,11 @@
 		<br>我会把尾巴摇啊摇
 		<br>小狗的心在跳
 		<br>
-        <br><br>
 		<div class="news_about">
-		还有一些话想说：如果你已经有喜欢的人，可以在钉钉或微信上给我发个“1”，我就懂了。
+		还有一些话想说：早已经写好的一直没有勇气送出去，我们马上要搬到二楼了，再不送可能没有机会了。
+		<br>
+		如果你已经有喜欢的人，可以在钉钉或微信上给我发个“1”，我就懂了。
+		<br>
 		如果你还没有，我们不妨认识一下啊。名字在下面，微信在右边。^_^
 		</div>
         <br>
