--- a/poem.html
+++ b/poem.html
@@ -114,8 +114,8 @@
 		如果你已经有喜欢的人，可以在钉钉或微信上给我发个“1”，我就懂了。
 		<br>
 		如果你还没有，我们不妨认识一下啊。名字在下面，微信在右边。^_^
-		<br>
-		我感觉你没有多大啊，而且只是先认识一下，交个朋友啊。惭愧的讲，我还不知道你的名字。
+		<br><br>
+		PS：我感觉你没有多大啊，而且只是先认识一下，交个朋友啊。惭愧的讲，我还不知道你的名字。
 		</div>
         <br>
 		<!--content end-->
